--- a/scss/_servis.scss
+++ b/scss/_servis.scss
@@ -4,10 +4,18 @@
       padding: 30px;
       p{
             text-transform: capitalize;
-            font-size: 45px;
+            font-size: 32px;
             color: #686868;
             text-align: center;
             font-family: 'Gilda Display', sans-serif;
+      }
+}
+
+@media only screen and (min-width:1024px) {
+      .servis-inner-learn{
+            p{
+                  font-size: 45px;
+            }
       }
 }
 
@@ -17,4 +25,41 @@
       justify-content: center;
       align-items: center;
       text-align: justify;
+      flex-direction: column;
 }
+
+@media only screen and (min-width: 1024px) {
+      .servis-inner-block{
+            flex-direction: row;
+      }
+}
+
+.servis-inner-block-restaran{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+}
+
+
+
+.servis-inner-block-restaran-img{
+      margin-bottom: 10px;
+}
+
+.servis-inner-block-restaran-text{
+      line-height: 2;
+      text-align: center;
+      span{
+            font-size: 25px;
+            color: #686868;
+            font-family: 'Gilda Display', sans-serif;
+            text-transform: capitalize;
+      }
+      p{
+            font-size: 14px;
+            color: #a0a0a0;
+            text-align: center;
+      }
+}
+
