--- a/css/style.css
+++ b/css/style.css
@@ -533,7 +533,7 @@
   .find-inner-img {
     display: flex;
     flex-basis: 60%;
-    height: 700px;
+    height: 800px;
   }
 }
 .find-inner-text {
@@ -564,7 +564,7 @@
 @media only screen and (min-width: 1024px) {
   .find-inner-text {
     flex-basis: 40%;
-    padding: 10px 40px;
+    padding: 70px 40px;
   }
   .find-inner-text h3 {
     font-size: 45px;
@@ -581,4 +581,116 @@
   background-color: #fff;
   display: inline-block;
   margin-top: 10px;
+}
+
+.from-inner {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+  padding: 40px 0;
+}
+
+.from-inner-learn {
+  text-align: center;
+}
+
+.from-inner-learn-el h3 {
+  font-size: 32px;
+  color: #686868;
+  text-transform: capitalize;
+  font-family: "Gilda Display", sans-serif;
+  font-weight: 100;
+}
+
+@media only screen and (min-width: 1024px) {
+  .from-inner-learn-el h3 {
+    font-size: 45px;
+  }
+}
+.from-inner-learn-text {
+  padding: 20px;
+}
+.from-inner-learn-text p {
+  color: #a0a0a0;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: left;
+  box-shadow: 0 0 10px 0 #e7eff7;
+  padding: 20px 30px;
+}
+
+@media only screen and (min-width: 1024px) {
+  .from-inner-learn-text p {
+    padding: 20px 40px;
+    margin: 0 200px;
+  }
+}
+.from-inner-block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  flex-direction: column;
+}
+
+.from-inner-block-text {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  font-family: "Gilda Display";
+  align-items: center;
+}
+.from-inner-block-text span {
+  font-size: 25px;
+  text-transform: capitalize;
+  color: #686868;
+}
+.from-inner-block-text p {
+  font-size: 14px;
+  color: #686868;
+}
+
+@media only screen and (min-width: 1024px) {
+  .from-inner-block {
+    flex-direction: row;
+  }
+}
+.keep {
+  background: url(/images/video.png);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  text-align: center;
+  padding: 30px;
+}
+
+@media only screen and (min-width: 1024px) {
+  .keep {
+    padding: 150px;
+  }
+}
+.keep-inner {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.keep-inner-text p {
+  text-transform: capitalize;
+  font-size: 32px;
+  color: #fff;
+  font-family: "Gilda Display", sans-serif;
+}
+
+@media only screen and (min-width: 1024px) {
+  .keep-inner-text p {
+    font-size: 50px;
+  }
+}
+.keep-inner-link a {
+  display: inline-block;
+}
+.keep-inner-link a img {
+  max-width: 70%;
 }/*# sourceMappingURL=style.css.map */
