--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,7 @@
 }
 
 .header-inner {
-  background: linear-gradient(to right, rgba(113, 119, 154, 0.7), rgba(207, 180, 155, 0.7)), url(/images/header_img.png);
+  background: linear-gradient(to right, rgba(113, 119, 154, 0.7), rgba(207, 180, 155, 0.7)), url(../images/header_img.png);
   background-size: 100% 100%;
   height: 350px;
   margin-left: 50px;
@@ -519,7 +519,7 @@
   }
 }
 .find-inner-img {
-  background: url(/images/find.png);
+  background: url(../images/find.png);
   height: 400px;
   background-size: cover;
 }
@@ -658,7 +658,7 @@
   }
 }
 .keep {
-  background: url(/images/video.png);
+  background: url(../images/video.png);
   background-size: 100% 100%;
   background-repeat: no-repeat;
   text-align: center;
