--- a/scss/_find.scss
+++ b/scss/_find.scss
@@ -13,7 +13,7 @@
 }
 
 .find-inner-img{
-      background: url(/images/find.png);
+      background: url(../images/find.png);
       height: 400px;
       
       background-size: cover;
