--- a/scss/_header-inner.scss
+++ b/scss/_header-inner.scss
@@ -1,7 +1,7 @@
 
 
 .header-inner{
-      background: linear-gradient(to right, rgba(113, 119, 154, 0.7), rgba(207, 180, 155, 0.7)), url(/images/header_img.png);
+      background: linear-gradient(to right, rgba(113, 119, 154, 0.7), rgba(207, 180, 155, 0.7)), url(../images/header_img.png);
       background-size: 100% 100%;
       height: 350px;
       margin-left: 50px;
