--- a/scss/_keep.scss
+++ b/scss/_keep.scss
@@ -1,7 +1,7 @@
 
 
 .keep{
-      background: url(/images/video.png);
+      background: url(../images/video.png);
       background-size: 100% 100%;
       background-repeat: no-repeat;
       text-align: center;
