--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,8 @@
       box-sizing: border-box;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Gilda+Display&family=Roboto:wght@400;500;700;900&display=swap');
+
 .container{
       max-width: 95%;
       margin: 0 auto;
